config/objects/Stop__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Note__c</fullName>
        <label>Actual Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <formula>if (not(isnull(Arrived_At_Date__c)),text(month(Arrived_At_Date__c))&amp;&quot;/&quot;&amp;text(day(Arrived_At_Date__c)),&quot;&quot;) &amp;&quot; &quot; &amp; if (not(isnull(Arrived_At_Hour__c)),text(Arrived_At_Hour__c)&amp;&quot;:&quot;&amp;lpad(text(Arrived_At_Minute__c),2,&quot;0&quot;),&quot;&quot;)&amp;if(or(not(isnull(Arrived_At_Hour__c)),not(isnull(Departed_At_Hour__c))),&quot; - &quot;,&quot;&quot;) &amp; if(Arrived_At_Date__c &lt;&gt; Departed_At_Date__c,text(month(Departed_At_Date__c))&amp;&quot;/&quot;&amp;text(day(Departed_At_Date__c))&amp;&quot; &quot;,&quot;&quot;)&amp;if(not(isnull(Departed_At_Hour__c)),text(Departed_At_Hour__c)&amp;&quot;:&quot;&amp;lpad(text(Departed_At_Minute__c),2,&quot;0&quot;),&quot;&quot;)</formula>
        <label>Actual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppointmentMade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointment Made?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AppointmentRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arrive_After_Date__c</fullName>
        <label>Arrive After Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrive_After_Hour__c</fullName>
        <label>Arrive After Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arrive_After_Minute__c</fullName>
        <label>Arrive After Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arrive_After_Name__c</fullName>
        <formula>text(month(Arrive_After_Date__c)) &amp; if (not(isnull(Arrive_After_Date__c)),&quot;/&quot;,&quot;&quot;) &amp; text(day(Arrive_After_Date__c)) &amp; if (not(isnull(Arrive_After_Date__c)),&quot;/&quot;,&quot;&quot;) &amp; text(year(Arrive_After_Date__c)) &amp; if ( not(isblank(text(Arrive_After_Hour__c ))), &quot; @ &quot; &amp; text(Arrive_After_Hour__c) + &quot;:&quot; &amp; if (not(isblank(text(Arrive_After_Minute__c))), text(Arrive_After_Minute__c),&quot;00&quot;),&quot;&quot;)</formula>
        <label>Arrive After Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrive_After__c</fullName>
        <label>Arrive After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrive_By_Date__c</fullName>
        <label>Arrive By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrive_By_Hour__c</fullName>
        <label>Arrive By Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arrive_By_Minute__c</fullName>
        <label>Arrive By Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arrive_By_Name__c</fullName>
        <formula>text(month(Arrive_By_Date__c)) &amp; if (not(isnull(Arrive_By_Date__c)),&quot;/&quot;,&quot;&quot;) &amp; text(day(Arrive_By_Date__c)) &amp; if (not(isnull(Arrive_By_Date__c)),&quot;/&quot;,&quot;&quot;) &amp; text(year(Arrive_By_Date__c)) &amp; if ( not(isblank(text(Arrive_By_Hour__c ))), &quot; @ &quot; &amp; lpad(text(Arrive_By_Hour__c),2,&quot;0&quot;) + &quot;:&quot; &amp; if (not(isblank(text(Arrive_By_Minute__c))), lpad(text(Arrive_By_Minute__c),2,&quot;0&quot;),&quot;00&quot;),&quot;&quot;)</formula>
        <label>Arrive By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrive_By__c</fullName>
        <label>Arrive By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrived_At_Date__c</fullName>
        <label>Arrived At Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrived_At_Hour__c</fullName>
        <label>Arrived At Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arrived_At_Minute__c</fullName>
        <label>Arrived At Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arrived_At_Name__c</fullName>
        <formula>text(month(Arrived_At_Date__c)) &amp; if (not(isnull(Arrived_At_Date__c)),&quot;/&quot;,&quot;&quot;) &amp; text(day(Arrived_At_Date__c)) &amp; if (not(isnull(Arrived_At_Date__c)),&quot;/&quot;,&quot;&quot;) &amp; text(year(Arrived_At_Date__c)) &amp; if ( not(isblank(text(Arrived_At_Hour__c ))), &quot; @ &quot; &amp; lpad(text(Arrived_At_Hour__c),2,&quot;0&quot;) + &quot;:&quot; &amp; if (not(isblank(text(Arrived_At_Minute__c))), lpad(text(Arrived_At_Minute__c),2,&quot;0&quot;),&quot;00&quot;),&quot;&quot;)</formula>
        <label>Arrived At Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrived_At__c</fullName>
        <label>Arrived At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrived_Pinged_At__c</fullName>
        <label>Arrived Pinged At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>COD_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COD Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Departed_At_Date__c</fullName>
        <label>Departed At Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departed_At_Hour__c</fullName>
        <label>Departed At Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Departed_At_Minute__c</fullName>
        <label>Departed At Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Departed_At_Name__c</fullName>
        <formula>text(month(Departed_At_Date__c)) &amp; if (not(isnull(Departed_At_Date__c)),&quot;/&quot;,&quot;&quot;) &amp; text(day(Departed_At_Date__c)) &amp; if (not(isnull(Departed_At_Date__c)),&quot;/&quot;,&quot;&quot;) &amp; text(year(Departed_At_Date__c)) &amp; if ( not(isblank(text(Departed_At_Hour__c ))), &quot; @ &quot; &amp; lpad(text(Departed_At_Hour__c),2,&quot;0&quot;) + &quot;:&quot; &amp; if (not(isblank(text(Departed_At_Minute__c))), lpad(text(Departed_At_Minute__c),2,&quot;0&quot;),&quot;00&quot;),&quot;&quot;)</formula>
        <label>Departed At Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departed_At__c</fullName>
        <label>Departed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departed_Pinged_At__c</fullName>
        <label>Departed Pinged At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detention__c</fullName>
        <label>Detention</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours_From_Previous__c</fullName>
        <formula>text(floor( Estimated_Time_From_Previous__c / 60)) &amp; &quot;:&quot; &amp; lpad(text(mod(Estimated_Time_From_Previous__c,60)),2,&quot;0&quot;)</formula>
        <label>Estimated Hours From Previous</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_From_Previous__c</fullName>
        <label>Estimated Time From Previous</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Layover_Days__c</fullName>
        <label>Layover Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liftgate_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Liftgate Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load__c</fullName>
        <label>Load</label>
        <referenceTo>Load__c</referenceTo>
        <relationshipLabel>Stops</relationshipLabel>
        <relationshipName>Stops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Stops</relationshipLabel>
        <relationshipName>Stops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lumper__c</fullName>
        <label>Lumper Expense</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MilesFromPrevious__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Miles From Previous</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <formula>if (not(isnull(Arrive_After_Date__c)),text(month(Arrive_After_Date__c))&amp;&quot;/&quot;&amp;text(day(Arrive_After_Date__c)),&quot;&quot;) &amp;&quot; &quot; &amp; if (not(isnull(Arrive_After_Hour__c)),text(Arrive_After_Hour__c)&amp;&quot;:&quot;&amp;lpad(text(Arrive_After_Minute__c),2,&quot;0&quot;),&quot;&quot;)&amp;if(or(not(isnull(Arrive_After_Hour__c)),not(isnull(Arrive_By_Hour__c))),&quot; - &quot;,&quot;&quot;) &amp; if(Arrive_After_Date__c &lt;&gt; Arrive_By_Date__c,text(month(Arrive_By_Date__c))&amp;&quot;/&quot;&amp;text(day(Arrive_By_Date__c))&amp;&quot; &quot;,&quot;&quot;)&amp;if(not(isnull(Arrive_By_Hour__c)),text(Arrive_By_Hour__c)&amp;&quot;:&quot;&amp;lpad(text(Arrive_By_Minute__c),2,&quot;0&quot;),&quot;&quot;)</formula>
        <label>Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reconsigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconsigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redelivery_Attempts__c</fullName>
        <label>Redelivery Attempts</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stop</label>
    <nameField>
        <label>Stop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valid_Arrive_By_Hours</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isnull(Arrive_By_Date__c)),Arrive_By_Date__c&lt;Arrive_After_Date__c)</errorConditionFormula>
        <errorMessage>Arrive by date must be on or after arrive after date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Plan_Hours</fullName>
        <active>true</active>
        <errorConditionFormula>or(and(Arrive_By_Date__c = Arrive_After_Date__c, Arrive_By_Hour__c = Arrive_After_Hour__c, Arrive_By_Minute__c &lt; Arrive_After_Minute__c),and(Arrive_By_Date__c = Arrive_After_Date__c,Arrive_By_Hour__c &lt; Arrive_After_Hour__c))</errorConditionFormula>
        <errorMessage>Arrive by time must be after the arrive after time.</errorMessage>
    </validationRules>
</CustomObject>